--- a/myproject/badmeter/template/base.html
+++ b/myproject/badmeter/template/base.html
@@ -13,7 +13,7 @@
 <script src="https://www.google.com/jsapi"></script>
 <script src="{% static 'js/main.js' %}"></script>
 <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.0/themes/start/jquery-ui.min.css" />
-<link rel="stylesheet" href="{% static 'css/home.css' %}?v=1" />
+<link rel="stylesheet" href="{% static 'css/home.css' %}" />
 </head>
 <body>
 <div class="pageWrapper">
